Fixed catalog page background color

--- a/servers/common/catalog/catalog.css
+++ b/servers/common/catalog/catalog.css
@@ -6,6 +6,7 @@ html, body, .dijitBorderContainer {
 
 .dijitContentPane {
     padding: 1em !important;
+    background-color: white;
 }
 
 h1, h2 {
