--- a/servers/common/catalog/catalog.css
+++ b/servers/common/catalog/catalog.css
@@ -1,7 +1,15 @@
-html, body, .dijitBorderContainer {
+html, body, #layout {
     width: 100%; 
     height: 100%;
     font-size: 0.95em;
+}
+
+#header {
+    height: 3.25em;
+}
+
+#header .dijitContentPane {
+    overflow: hidden;
 }
 
 .dijitContentPane {
