Start of CollectionEditor widget
* Builds grid based on collection schema
* Error / loading messages
* Create, Delete, Undo, Redo buttons + icons
* Db / col indicator labels
* Undo / redo not yet implemented

--- a/servers/common/catalog/catalog.css
+++ b/servers/common/catalog/catalog.css
@@ -144,7 +144,7 @@ html, body, .catalog #layout {
     margin-bottom: 10px;
 }
 
-.catalog #start input, .catalog select {
+.catalog #start input, .catalog #start select {
     width: 15em;
 }
 
