--- a/servers/common/uow/ui/css/CollectionEditor.css
+++ b/servers/common/uow/ui/css/CollectionEditor.css
@@ -14,3 +14,10 @@
     width: 100%;
     height: 100%;
 }
+
+.uowCollectionEditor .dijitToolbar label {
+    vertical-align: middle;
+    display: inline-block;
+    font-size: 0.85em;
+    color: gray;
+}
