--- a/servers/common/uow/ui/templates/CollectionEditor.html
+++ b/servers/common/uow/ui/templates/CollectionEditor.html
@@ -17,6 +17,12 @@
               type="button">${labels.delete_button_label}</button
       <span dojoType="dijit.ToolbarSeparator"></span
       ><button dojoType="dijit.form.Button" 
+              dojoAttachPoint="refreshButton"
+              dojoAttachEvent="onClick:_onClickRefresh" 
+              iconClass="uowRefresh"
+              title="${labels.refresh_button_title}"
+              type="button">${labels.refresh_button_label}</button
+      ><button dojoType="dijit.form.Button" 
               disabled
               dojoAttachPoint="undoButton"
               dojoAttachEvent="onClick:_onClickUndo" 
@@ -25,6 +31,7 @@
               type="button">${labels.undo_button_label}</button
       ><button dojoType="dijit.form.Button" 
               disabled
+              style="display: none;"
               dojoAttachPoint="redoButton"
               dojoAttachEvent="onClick:_onClickRedo" 
               iconClass="uowRedo"
