--- a/servers/common/uow/ui/css/uow.css
+++ b/servers/common/uow/ui/css/uow.css
@@ -5,4 +5,5 @@
  */
 @import url("LoginButton.css");
 @import url("CollectionEditor.css");
+@import url("DatabaseEditor.css");
 @import url("Icons.css");
