--- a/servers/common/uow/ui/css/Icons.css
+++ b/servers/common/uow/ui/css/Icons.css
@@ -50,3 +50,19 @@
     width: 16px;
     height: 16px;
 }
+
+.uowCollectionCreate {
+    background-image: url('icons/database-plus.png');
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    width: 16px;
+    height: 16px;
+}
+
+.uowCollectionDrop {
+    background-image: url('icons/database-minus.png');
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    width: 16px;
+    height: 16px;
+}
