Continued work on database editor

--- a/servers/common/uow/ui/templates/DatabaseEditor.html
+++ b/servers/common/uow/ui/templates/DatabaseEditor.html
@@ -21,70 +21,39 @@
         ><label for="${id}_col_name">${labels.collection_text_label}</label>
         <select dojoType="dijit.form.FilteringSelect"
                 disabled
+                required="false"
                 id="${id}_col_name"
                 searchAttr="url"
                 labelFunc="uow.ui.DatabaseEditor.formatCollectionLabel"
+                dojoAttachEvent="onChange:_onSelectCollection"
                 dojoAttachPoint="colNameWidget"></select
         ><button dojoType="dijit.form.Button"
                  disabled
                  showLabel="false"
                  dojoAttachEvent="onClick:_onClickCreate"
+                 dojoAttachPoint="createButton"
                  iconClass="uowCollectionCreate">${labels.create_button_label}</button
         ><button dojoType="dijit.form.Button"
                  disabled
                  showLabel="false"
                  dojoAttachEvent="onClick:_onClickDrop"
-                 iconClass="uowCollectionDrop">${labels.drop_button_label}</button
-        >
-      </div>
-      <div dojoType="dijit.Toolbar"
-           class="uowDatabaseEditorMode"
-           region="right">
-        <input type="radio" 
-               checked
-               disabled
-               dojoType="dijit.form.RadioButton" 
-               name="uowDatabaseEditorMode"
-               id="${id}_database_mode"
-               value="database" /
-        ><label for="${id}_database_mode">${labels.database_text_label}</label>
-        <input type="radio" 
-               disabled
-               dojoType="dijit.form.RadioButton" 
-               name="uowDatabaseEditorMode"
-               id="${id}_collection_mode"
-               value="collection" /
-        ><label for="${id}_collection_mode">${labels.collection_text_label}</label>
+                 dojoAttachPoint="dropButton"
+                 iconClass="uowCollectionDrop">${labels.drop_button_label}</button>
       </div>
     </div>
     <div dojoType="dijit.layout.StackContainer" 
+         dojoAttachPoint="stackWidget"
          region="center">
       <div dojoType="dijit.layout.ContentPane"
            class="uowDatabaseEditorIdle"
            dojoAttachPoint="idlePane">${labels.idle_label}</div>
       <div dojoType="dijit.layout.TabContainer" 
-           dojoAttachPoint="collectionTabs"
+           dojoAttachPoint="editorTabs"
            tabStrip="true">
         <div dojoType="dijit.layout.ContentPane" 
-             title="Data"
-             class="uowDatabaseEditorWrapper">
-          <div dojoType="uow.ui.CollectionEditor"></div>
-        </div>
-        <div dojoType="dijit.layout.ContentPane" 
-             title="Access">
-          access editor
-        </div>
-        <div dojoType="dijit.layout.ContentPane" 
-             title="Schema">
-          schema editor
-        </div>
-      </div>
-      <div dojoType="dijit.layout.TabContainer" 
-           dojoAttachPoint="databaseTabs"
-           tabStrip="true">
-        <div dojoType="dijit.layout.ContentPane" 
-             title="Access">
-          access editor
+             iconClass="uowDatabase"
+             title="${labels.database_tab_label}">
+          db info
         </div>
       </div>
     </div>
