--- a/servers/common/uow/ui/templates/CollectionEditor.html
+++ b/servers/common/uow/ui/templates/CollectionEditor.html
@@ -6,13 +6,13 @@
       <button dojoType="dijit.form.Button" 
               dojoAttachPoint="newButton" 
               dojoAttachEvent="onClick:_onClickNew"
-              iconClass="uowDatabaseInsert"
+              iconClass="uowRowInsert"
               title="${labels.new_button_title}"
               type="button">${labels.new_button_label}</button
       ><button dojoType="dijit.form.Button" 
               dojoAttachPoint="deleteButton"
               dojoAttachEvent="onClick:_onClickDelete" 
-              iconClass="uowDatabaseDelete"
+              iconClass="uowRowDelete"
               title="${labels.delete_button_title}"
               type="button">${labels.delete_button_label}</button
       <span dojoType="dijit.ToolbarSeparator"></span
