Started work on collection access editor

--- a/servers/common/uow/ui/css/uow.css
+++ b/servers/common/uow/ui/css/uow.css
@@ -4,6 +4,7 @@
  * Copyright UNC Open Web Group. All Rights Reserved. 
  */
 @import url("LoginButton.css");
+@import url("CollectionAccessEditor.css");
 @import url("CollectionEditor.css");
 @import url("DatabaseEditor.css");
 @import url("Icons.css");
