--- a/servers/common/uow/ui/templates/DatabaseEditor.html
+++ b/servers/common/uow/ui/templates/DatabaseEditor.html
@@ -53,7 +53,7 @@
         <div dojoType="dijit.layout.ContentPane" 
              iconClass="uowDatabase"
              title="${labels.database_tab_label}">
-          db info
+          Database info coming soon
         </div>
       </div>
     </div>
