--- a/servers/common/uow/ui/css/CollectionAccessEditor.css
+++ b/servers/common/uow/ui/css/CollectionAccessEditor.css
@@ -18,4 +18,10 @@
     background-color: #f2f2f2;
     padding: 5px;
     border: 1px solid #ccc;
+    font-size: 0.85em;
+    font-weight: bold;
+}
+
+.uowCollectionAccessEditor .uowCollectionAccessEditorIdle {
+
 }
