Collection selection from db tab
* update tab titles
* fix bugs

--- a/servers/common/uow/ui/templates/DatabaseEditor.html
+++ b/servers/common/uow/ui/templates/DatabaseEditor.html
@@ -50,10 +50,10 @@
       <div dojoType="dijit.layout.TabContainer" 
            dojoAttachPoint="editorTabs"
            tabStrip="true">
-        <div dojoType="dijit.layout.ContentPane" 
+        <div dojoType="uow.ui.DatabaseAccessEditor" 
              iconClass="uowDatabase"
-             title="${labels.database_tab_label}">
-          Database info coming soon
+             title="${labels.database_tab_label}"
+			 dojoAttachPoint="dbAccessWidget">
         </div>
       </div>
     </div>
