Copyright fixes, schema editor enablement

--- a/servers/common/uow/ui/css/DatabaseAccessEditor.css
+++ b/servers/common/uow/ui/css/DatabaseAccessEditor.css
@@ -1,7 +1,7 @@
 /**
  * Styles for the database access editor widget.
  *
- * Copyright UNC Open Web Group. All Rights Reserved. 
+ * Copyright UNC Open Web Team 2010. All Rights Reserved. 
  */
 .uowDatabaseAccessEditor {
 	overflow: auto;
