--- a/servers/common/uow/ui/css/CollectionAccessEditor.css
+++ b/servers/common/uow/ui/css/CollectionAccessEditor.css
@@ -1,7 +1,7 @@
 /**
  * Styles for the collection access editor widget.
  *
- * Copyright UNC Open Web Group. All Rights Reserved. 
+ * Copyright UNC Open Web Team 2010. All Rights Reserved. 
  */
 .uowCollectionAccessEditor table {
     border-collapse: collapse;
