--- a/servers/common/uow/ui/css/CollectionEditor.css
+++ b/servers/common/uow/ui/css/CollectionEditor.css
@@ -1,7 +1,7 @@
 /**
  * Styles for the collection editor widget.
  *
- * Copyright UNC Open Web Group. All Rights Reserved. 
+ * Copyright UNC Open Web Team 2010. All Rights Reserved. 
  */
 .uowCollectionEditor {
     width: 100%;
