--- a/servers/common/uow/ui/css/DatabaseEditor.css
+++ b/servers/common/uow/ui/css/DatabaseEditor.css
@@ -1,7 +1,7 @@
 /**
  * Styles for the database editor widget.
  *
- * Copyright UNC Open Web Group. All Rights Reserved. 
+ * Copyright UNC Open Web Team 2010. All Rights Reserved. 
  */
 .uowDatabaseEditor {
     width: 100%;
