--- a/servers/common/uow/ui/css/Icons.css
+++ b/servers/common/uow/ui/css/Icons.css
@@ -1,7 +1,7 @@
 /**
  * Icons for widgets.
  *
- * Copyright UNC Open Web Group. All Rights Reserved. 
+ * Copyright UNC Open Web Team 2010. All Rights Reserved. 
  */
 .uowRowInsert {
     background-image: url('icons/database-insert.png');
