--- a/servers/common/uow/ui/css/LoginButton.css
+++ b/servers/common/uow/ui/css/LoginButton.css
@@ -1,5 +1,5 @@
 /**
  * Styles for the login button widget.
  *
- * Copyright UNC Open Web Group. All Rights Reserved. 
+ * Copyright UNC Open Web Team 2010. All Rights Reserved. 
  */
