--- a/servers/common/uow/ui/css/Icons.css
+++ b/servers/common/uow/ui/css/Icons.css
@@ -114,3 +114,11 @@
     width: 16px;
     height: 16px;
 }
+
+.uowCollectionSave {
+    background-image: url('icons/database-pencil.png');
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    width: 16px;
+    height: 16px;
+}
