Add Override ownership mode.

--- a/servers/common/uow/ui/templates/CollectionAccessEditor.html
+++ b/servers/common/uow/ui/templates/CollectionAccessEditor.html
@@ -11,6 +11,7 @@
         <th data-mode="u">${labels.update_column_label}</th>
         <th data-mode="d">${labels.delete_column_label}</th>
         <th data-mode="R">${labels.restricted_read_column_label}</th>
+        <th data-mode="O">${labels.override_column_label}</th>
       </tr>
     </thead>
     <tbody dojoAttachPoint="tableBody">
