--- a/uow/ui/css/Icons.css
+++ b/uow/ui/css/Icons.css
@@ -149,5 +149,13 @@
     background-repeat: no-repeat;
     background-position: 50% 50%;
     width: 16px;
-    height: 16px;    
+    height: 16px;
+}
+
+.uowBusyIcon {
+    background-image: url('icons/spinner.gif');
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    width: 16px;
+    height: 16px;
 }
