--- a/uow/ui/css/uow.css
+++ b/uow/ui/css/uow.css
@@ -4,6 +4,7 @@
  * Copyright UNC Open Web Team 2010. All Rights Reserved. 
  */
 @import url("LoginButton.css");
+@import url("BrowserDialog.css");
 @import url("ConfirmDialog.css");
 @import url("DatabaseEditor.css");
 @import url("DatabaseAccessEditor.css");
