Busy overlay bug fixes

--- a/uow/ui/css/uow.css
+++ b/uow/ui/css/uow.css
@@ -11,4 +11,5 @@
 @import url("CollectionEditor.css");
 @import url("CollectionSchemaEditor.css");
 @import url("CollectionAccessEditor.css");
+@import url("BusyOverlay.css");
 @import url("Icons.css");
