--- a/uow/ui/templates/BusyOverlay.html
+++ b/uow/ui/templates/BusyOverlay.html
@@ -1,6 +1,6 @@
 <div class="uowBusyOverlay" tabindex="-1">
-  <div class="uowBusyOverlayCenter">
-    <div class="uowBusyOverlayMessage" dojoAttachPoint="messageNode">${message}</div>
+  <div class="uowBusyOverlayCenter" style="position: absolute; top: 50%; left: 50%;">
+    <div class="uowBusyOverlayMessage" dojoAttachPoint="messageNode" style="position: relative; top: -2.75em; left: -50%; white-space: nowrap; text-align: center;">${message}</div>
   </div>
-  <div class="uowBusyIcon" dojoAttachPoint="animationNode"></div>
+  <div class="uowBusyIcon" style="position: absolute; width: 100%; height: 100%;"dojoAttachPoint="animationNode"></div>
 </div>
